2021-06-06  Sergei Trofimovich  <slyfox@gentoo.org>

	* elflint.c (buffer_left): Mark as 'static' to avoid external linkage
	failure.

2021-05-12  Dmitry V. Levin  <ldv@altlinux.org>

	* elfcompress.c (process_file): Return 1 instead of -1 in case of an
	error.

	* elfcompress.c (process_file): Remove redundant assignment in case of
	"Nothing to do".

	* elfcompress.c (process_file): Set res to 0 in case of "Nothing to do".

2021-04-19  Martin Liska  <mliska@suse.cz>

	* elfclassify.c (run_classify): Use startswith.
	* elfcompress.c (process_file): Likewise.
	* nm.c (show_symbols_sysv): Likewise.
	* readelf.c (print_debug): Likewise.
	(handle_notes_data): Likewise.
	(dump_data_section): Likewise.
	(print_string_section): Likewise.
	* strip.c (remove_debug_relocations): Likewise.

2021-04-03  Mark Wielaard  <mark@klomp.org>

	* nm.c (show_symbols): close dwfl_fd if dwfl_begin fails.

2021-04-03  Mark Wielaard  <mark@klomp.org>

	* unstrip.c (handle_output_dir_module): Free output_file when done.

2021-04-03  Mark Wielaard  <mark@klomp.org>

	* ar.c (do_oper_insert): Always close newfd.

2021-03-03  Mark Wielaard  <mark@klomp.org>

	* readelf.c (handle_symtab): Sanity check verneed vna_next,
	vn_next and verdef vd_next offsets.

2021-03-02  Timm Bäder  <tbaeder@redhat.com>

	* elfcompress.c (process_file): Remove cleanup() function and
	replace it with a cleanup label at the end of the function.
	Initialize res to -1.

2021-02-17  Timm Bäder  <tbaeder@redhat.com>

	* elfcompress.c (process_file): Move get_sections function...
	(get_section): ...to top-level static function taking an
	sections array and shnum.

2021-02-17  Timm Bäder  <tbaeder@redhat.com>

	* elfcompress.c (process_file): Move get_section function...
	(get_section): ...to top-level static function taking an
	sections array.

2021-02-17  Timm Bäder  <tbaeder@redhat.com>

	* elfcompress.c (process_file): Move set_section function...
	(set_section): ...to top-level static function taking a